@@ -33,14 +33,16 @@ public class ProfileService {
         profile.setFirstName(profile.getFirstName());
         profile.setFamilyName(data.getFamilyName());
         profile.setNickname(data.getNickname());
-        profile.setBlockEmail(data.getBlockEmail());
         profile.setEmail(data.getEmail());
+        profile.setBlockEmail(data.getBlockEmail());
+        profile.setPhoneNumber(data.getPhoneNumber());
+        profile.setBlockPhoneNumber(data.getBlockPhoneNumber());
         return this.profileRepository.save(profile);
     }
 
     public Profile update(String id, ProfileResource data, List<String> updates) {
         Profile profile = findById(id);
-        List<BiConsumer<Profile, ProfileResource>> handlers = updates.stream().map(this::createUpdateHandler).collect(Collectors.toList());
+        List<BiConsumer<Profile, ProfileResource>> handlers = updates.stream().map(this::createUpdateHandler).toList();
 
         // run if no errors
         handlers.forEach(handler -> handler.accept(profile, data));
@@ -53,14 +55,17 @@ public class ProfileService {
     }
 
     private BiConsumer<Profile, ProfileResource> createUpdateHandler(String attrib) {
-        switch(attrib) {
-            case "firstName": return (profile, data) -> profile.setFirstName(data.getFirstName());
-            case "familyName": return (profile, data) -> profile.setFamilyName(data.getFamilyName());
-            case "nickname": return (profile, data) -> profile.setNickname(data.getNickname());
-            case "email": return (profile, data) -> profile.setEmail(data.getEmail());
-            case "blockEmail": return (profile, data) -> profile.setBlockEmail(data.getBlockEmail());
-            default: throw new ResponseStatusException(HttpStatus.UNPROCESSABLE_ENTITY, String.format("unknown attribute %s", attrib));
-        }
+        return switch (attrib) {
+            case "firstName" -> (profile, data) -> profile.setFirstName(data.getFirstName());
+            case "familyName" -> (profile, data) -> profile.setFamilyName(data.getFamilyName());
+            case "nickname" -> (profile, data) -> profile.setNickname(data.getNickname());
+            case "email" -> (profile, data) -> profile.setEmail(data.getEmail());
+            case "blockEmail" -> (profile, data) -> profile.setBlockEmail(data.getBlockEmail());
+            case "phoneNumber" -> (profile, data) -> profile.setPhoneNumber(data.getPhoneNumber());
+            case "blockPhoneNumber" -> (profile, data) -> profile.setBlockPhoneNumber(data.getBlockPhoneNumber());
+            default ->
+                    throw new ResponseStatusException(HttpStatus.UNPROCESSABLE_ENTITY, String.format("unknown attribute %s", attrib));
+        };
     }
 
 }
